--- a/tutorial/templates/tutorial/index.html
+++ b/tutorial/templates/tutorial/index.html
@@ -4,6 +4,10 @@
 
 <h3> Hi {{ name | title }}! </h3>
 <b> Host: </b> {{ host }} </br>
+<b> Words: </b>
+{% for word in words %}
+	{{ word.word | safe }}
+{% endfor %}
 
 
 
