initial app containerization successful

--- a/tutorial/templates/tutorial/index.html
+++ b/tutorial/templates/tutorial/index.html
@@ -2,7 +2,7 @@
 
 
 
-<h3> Hi {{ name | title }}! </h3>
+<h3> Hi {{ name }}! </h3>
 <b> Host: </b> {{ host }} </br>
 <b> Words: </b>
 {% for word in words %}
